# aosuite

.github/workflows/: ci.yml
2026/: Dockerfile  ProjectSummary.md  README.md  ROADMAP.md  RefinedRoadmap2026.md  Roadmap2026.html  SECURITY_AUDIT.md  SysopGuide.md  WalletSyncGuide.md  ao-recorder.service
2026/installers/: README.md
2026/installers/debian/: ao-exchange.service  ao-recorder.service  ao-validator.service  build-sims.sh  build.sh  postinst-ao-exchange  postinst-ao-recorder  postinst-ao-validator  postrm-service  prerm-service
2026/installers/windows/: aosims.wxs  aosuite.wxs  build-sims.ps1  build.ps1
2026/lessons/: wrong-test-vector.md
2026/ops/: grafana-dashboard.json
2026/research/: ATTITUDES_AND_REGULATION.md  CREDIT_PROCESSORS.md  CREDIT_PROCESSORS_DATA.csv  DEPLOYMENT_OPPORTUNITIES.md  GOVERNMENT.md  PROMOTION_PLAN.md
2026/research/promo_articles/: 01_beach_vendor_blockchain.md  02_tax_loop_ubi.md  03_cooperative_accounting.md  04_rust_blockchain_simulator.md  05_why_we_dropped.md
2026/sims/: Cargo.toml  GUIDE.md
2026/sims/docs/: README.md  ROADMAP.md
2026/sims/scenarios/: atomic-exchange.toml  audit-adversarial.toml  exchange-3chain.toml  infra-resilience.toml  island-life-full.toml  island-life.toml  minimal.toml  price-war.toml  recorder-switch.toml  three-chain.toml
2026/sims/scripts/: build.ps1  build.sh  launch-sim.ps1  launch-sim.sh  run-sim.ps1  run-sim.sh  run-stack.ps1  run-stack.sh
2026/sims/src/: agents.rs  client.rs  config.rs  main.rs  mqtt.rs  observer.rs  transfer.rs  viewer.rs  wallet.rs
2026/sims/viewer/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
2026/sims/viewer/src/: App.tsx  api.ts  store.ts  utils.ts
2026/sims/viewer/src/components/: AgentDetail.tsx  AgentTable.tsx  AppScreenPanel.tsx  ChainTable.tsx  MapView.tsx  TimeControls.tsx  TransactionLog.tsx  TransactionToasts.tsx  WelcomeOverlay.tsx
2026/specs/: Architecture.md  AtomicExchange.md  BlobRetentionReport.md  CompetingRecorders.md  CooperativeMetadata.md  CryptoChoices.md  EconomicRules.md  UnmetNeedsReport.md  ValidationAndTrust.md  WalletSync.md  WireFormat.md
2026/specs/conformance/: vectors.json
2026/src/: Cargo.toml
2026/src/ao-chain/: Cargo.toml
2026/src/ao-chain/src/: block.rs  caa.rs  error.rs  expiry.rs  genesis.rs  lib.rs  migration.rs  owner_keys.rs  recorder_switch.rs  reward_rate.rs  store.rs  validate.rs
2026/src/ao-chain/tests/: acceptance_ta3.rs  chain_flow.rs
2026/src/ao-cli/: Cargo.toml
2026/src/ao-cli/src/: accept.rs  assign.rs  balance.rs  caa_status.rs  export.rs  genesis.rs  history.rs  inspect.rs  keygen.rs  main.rs  refute.rs
2026/src/ao-crypto/: Cargo.toml
2026/src/ao-crypto/src/: hash.rs  lib.rs  separable.rs  sign.rs
2026/src/ao-exchange/: Cargo.toml
2026/src/ao-exchange/src/: caa.rs  client.rs  config.rs  db.rs  engine.rs  lib.rs  main.rs  trade.rs  transfer.rs  wallet.rs
2026/src/ao-pwa/: index.html  package-lock.json  package.json
2026/src/ao-pwa/public/: manifest.json  sw.js
2026/src/ao-pwa/src/: App.tsx  index.css
2026/src/ao-pwa/src/api/: client.ts
2026/src/ao-pwa/src/components/: AnimatedQrCode.tsx  AttachmentPicker.tsx  BlobViewer.tsx  ChainDetail.tsx  ChainList.tsx  ChainMigrationBanner.tsx  ConsumerView.tsx  CooperativeView.tsx  CredentialIssue.tsx  EscrowView.tsx  ExchangeDashboard.tsx  Header.tsx  InvestorView.tsx  NotificationSettings.tsx  OwnerKeyManager.tsx  PairedDevices.tsx  PassphrasePrompt.tsx  PrintableQr.tsx  QrCode.tsx  QrScanner.tsx  RecorderIdentity.tsx  RecorderSwitch.tsx  SalesReport.tsx  Settings.tsx  TransactionHistory.tsx  TrustIndicator.tsx  VendorDashboard.tsx  VendorMap.tsx  VendorView.tsx  WalletBackup.tsx  WalletSync.tsx
2026/src/ao-pwa/src/core/: assignment.ts  (+30 more)
2026/src/ao-recorder/: Cargo.toml  ao-recorder.service
2026/src/ao-recorder/src/: blob.rs  config.rs  dashboard.rs  federation.rs  health.rs  identity.rs  lib.rs  main.rs  metrics.rs  mqtt.rs  security.rs  standby.rs
2026/src/ao-recorder/tests/: api_test.rs  blob_test.rs
2026/src/ao-relay/: Cargo.toml
2026/src/ao-relay/src/: main.rs
2026/src/ao-types/: Cargo.toml
2026/src/ao-types/src/: bigint.rs  dataitem.rs  fees.rs  json.rs  lib.rs  timestamp.rs  typecode.rs  vbc.rs
2026/src/ao-validator/: Cargo.toml
2026/src/ao-validator/src/: alert.rs  anchor.rs  chain_audit.rs  client.rs  config.rs  lib.rs  main.rs  metrics.rs  store.rs  verifier.rs
apps/: apps.pro
apps/ProtocolDemo/: protocolDemo.h
docs/html/: 2026review.html  2026update.html  BeachVendorBlockchain.html  CooperativeAccounting.html  FarmingCooperatives.html  IslandUBI.html  RustBlockchainSimulator.html  TaxLoopUBI.html  TourismVendors.html  WhyWeDropped.html  article.css  index.html
gpg/: build.sh
(+33 files in other folders)
