[package]
name = "ao-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ao"
path = "src/main.rs"

[dependencies]
ao-types = { path = "../ao-types" }
ao-crypto = { path = "../ao-crypto" }
clap = { version = "4", features = ["derive"] }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
