[package]
name = "ao-exchange"
version = "0.1.0"
edition = "2024"

[lib]
name = "ao_exchange"
path = "src/lib.rs"

[[bin]]
name = "ao-exchange"
path = "src/main.rs"

[dependencies]
ao-types = { path = "../ao-types" }
ao-crypto = { path = "../ao-crypto" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"
num-bigint = "0.4"
num-rational = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
