[package]
name = "ao-recorder"
version = "0.1.0"
edition = "2024"

[lib]
name = "ao_recorder"
path = "src/lib.rs"

[[bin]]
name = "ao-recorder"
path = "src/main.rs"

[dependencies]
ao-types = { path = "../ao-types" }
ao-crypto = { path = "../ao-crypto" }
ao-chain = { path = "../ao-chain" }
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"
rumqttc = "0.24"
num-bigint = "0.4"
num-traits = "0.2"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
sysinfo = "0.33"
pin-project-lite = "0.2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tempfile = "3"
num-rational = "0.4"
